# tars-cli

./: .gitignore  CHANGELOG.md  CLI_TEST_REPORT.md  COMMANDS.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEVSECOPS_PIPELINE.md  FUNDING.md  IMPLEMENTATION_SUMMARY.md  INIT_COMMAND.md  LICENSE  PROMETHEUS_INTEGRATION.md  PUBLISHING.md  QUICK_REFERENCE.md  README.md  RELEASE_v3.0.0.md  RENAME_CHECKLIST.md  RENAME_COMPLETE.md  SECURITY_AUDIT.md  SECURITY_WELCOME_UPDATE.md  SEO_COMPLETE.md  SEO_GUIDE.md  SPRINT_PLAN.md  SRE_SPRINT_COMPLETE.md  WHY_TARS.md  pyproject.toml  requirements.in  requirements.txt  setup.py  tars.py  test_cli.py  test_commands.sh
.github/: DESCRIPTION.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  INCIDENT_RESPONSE.md  NEXT_STEPS.md  PRODUCTION_READINESS.md  SRE_COMMANDS.md
docs/implementation/: REPO_CLEANUP_COMPLETE.md
legacy/: tars.py.bak
src/stars/: cli.py  commands.py  config.py  incident.py  k8s_client.py  sre_tools.py
src/tars/: __init__.py  ai.py  cli.py  commands.py  config.py  k8s_client.py  utils.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py
